--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Hashtags</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="icon" type="image/png" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/firework-burst-icon-v2.png">
+<link rel="icon" type="image/png" href="http://oplata.biz/uploads/images/works/1393682274-75672-Games%20alt.png">
 
 </head>
 <body>
